# TGGenshinPicBed_Bot

./: .dockerignore  .gitignore  README.md  config.py  logger.py  main.py  paihub.sql  pixivdownload.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: integration-test.yaml
config/: config.json.example
crawl/: base.py  pixivdownload.py  repository.py  request.py
data/: namemap.json
github/: README.md
model/: README.md  artwork.py  containers.py  helpers.py
plugins/: contribute.py  download.py  errorhandler.py  examine.py  photo.py  push.py  search.py  send.py  set_audit.py  start.py
service/: __init__.py  base.py  cache.py  repository.py  service.py
sites/: __init__.py
sites/base/: repository.py
sites/bilibili/: api.py  base.py  repository.py
sites/mihoyobbs/: api.py  base.py  interface.py  repository.py  service.py
sites/pixiv/: __init__.py  api.py  base.py  interface.py  repository.py  service.py
sites/twitter/: api.py  base.py  interface.py  repository.py  service.py
src/: contribute.py  httprequests.py  logger.py  markdown.py  pixiv.py  utils.py
src/base/: config.py  httprequests.py  logger.py
src/model/: artwork.py
src/production/: auditor.py  contribute.py  namemap.py  pixivdownload.py  redisaction.py
temp/: README.md
tests/: README.md  namemap_test.py  pixiv_test.py  test_auditor.py  test_namemap.py
tests/integration/: .env.example  Dockerfile  data.sql  docker-compose.yaml  reset.sql  test_crawl_repository.py  test_crawl_repository.txt  (+3 more)
utils/: README.md  httprequests.py  namemap.py  network.py  redisaction.py
(+64 files in other folders)
